Fixed overflow-x on body

--- a/styles/PreviousWork.module.css
+++ b/styles/PreviousWork.module.css
@@ -1,6 +1,5 @@
 .previousWorkContainer {
     margin-bottom: 50px;
-    overflow: hidden;
 }
 
 .header {
