--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@ body {
   align-items: center;
   align-content: center;
   font-size: 16.5px;
+  overflow-x: hidden;
 }
 
 a {
